--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^15.4.2",
     "react-http-request": "^1.0.3",
     "react-router": "~3.0.2",
+    "react-slick": "^0.15.4",
     "react-tap-event-plugin": "^2.0.1",
     "script-loader": "^0.6.1",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^0.12.3",
     "superagent": "^3.5.2"
   },
