--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "~3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "script-loader": "^0.6.1",
+    "semantic-ui-react": "^0.76.0",
     "style-loader": "^0.12.3",
     "superagent": "^3.5.2"
   },
