--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-http-request": "^1.0.3",
     "react-router": "~3.0.2",
     "react-tap-event-plugin": "^2.0.1",
+    "react-tooltip": "^3.4.0",
     "script-loader": "^0.6.1",
     "semantic-ui-react": "^0.76.0",
     "style-loader": "^0.12.3",
